Huge Deck.java refactor and addition of javadoc